# Episteme

./: .discovery_cache  .flattened-pom.xml  .gitignore  BenchQuant.java  CONTRIBUTING.md  DebugDiscovery.java  Dockerfile  InspectJBullet.java  NATIVE_BUILD.md  Nd4jDiag.java  OpenCLCheck.java  PanamaCheck.java  ProviderAudit.java  README.md  audit_log_utf8.txt  benchmark-results-physics-cuda-4.json  benchmark-results-physics-cuda-5.json  benchmark-results-physics-cuda-6.json  benchmark-results-physics-cuda-7.json  benchmark-results-physics.json  benchmark-results-quantum.json  benchmark_final_report.txt  benchmark_final_run.txt  benchmark_final_v1.txt  benchmark_run.txt  benchmark_run_debug.txt  benchmark_run_v5.txt  benchmark_run_v6.txt  benchmark_run_v7.txt  build_and_debug_cuda.sh  build_episteme_jni.ps1  build_episteme_native.ps1  build_error.txt  build_errors.txt  build_jdk25.bat  build_miniaudio.ps1  build_miniaudio.sh  build_mpfr.ps1  build_mpfr.sh  build_native.ps1  (+189 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Release.yml  maven-jdk21.yml  maven-jdk25.yml  maven.yml  release.yml
docker/: Dockerfile.gpu  Dockerfile.huggingface  entrypoint.sh
docs/: BENCHMARK_COMPARISON.md  BUILD.md  CONSUMPTION.md  DEPLOYMENT_HF.md  DEPLOYMENT_MCP.md  DISTRIBUTED_ALGEBRA_COMPLIANCE_REPORT.md  FLOAT_ALGEBRA_COMPLIANCE_REPORT.md  GRPC_VS_EJML_COMPLIANCE.md  HIGH_PRECISION_AUDIT.md  HIGH_PRECISION_AUDIT_NOTES.md  HIGH_PRECISION_COMPLIANCE_REPORT.md  HIGH_PRECISION_CORRECTNESS_REPORT.md  HIGH_PRECISION_PERFORMANCE_REPORT.json  HIGH_PRECISION_PERFORMANCE_REPORT.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260504-145027.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260507-195856.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260508-141201.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260509-141513.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260509-165826.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260510-194703.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260512-161222.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260512-162431.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260512-162740.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260512-163310.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260512-163909.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260512-174124.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260512-180343.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260512-192819.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260515-132223.md  LINEAR_ALGEBRA_AUDIT_EXACT_20260515-133004.md  LINEAR_ALGEBRA_AUDIT_FAST.md  LINEAR_ALGEBRA_AUDIT_FAST_20260504-154017.md  LINEAR_ALGEBRA_AUDIT_FAST_20260504-161017.md  LINEAR_ALGEBRA_AUDIT_FAST_20260504-200251.md  LINEAR_ALGEBRA_AUDIT_FAST_20260507-184157.md  LINEAR_ALGEBRA_AUDIT_FAST_20260507-190351.md  LINEAR_ALGEBRA_AUDIT_FAST_20260508-225559.md  LINEAR_ALGEBRA_AUDIT_FAST_20260508-234719.md  LINEAR_ALGEBRA_AUDIT_FAST_20260509-123237.md  LINEAR_ALGEBRA_AUDIT_FAST_20260509-125012.md  (+103 more)
docs/benchmark-results/: AUDIT_FAST_GCP.md  High-Precision_Benchmark_Result_20260514_214534.json  High-Precision_Benchmark_Result_20260514_214728.json  LINEAR_ALGEBRA_COMPLIANCE_REPORT_AWS_EXACT.md  LINEAR_ALGEBRA_COMPLIANCE_REPORT_AWS_FAST.md  LINEAR_ALGEBRA_COMPLIANCE_REPORT_AWS_NORMAL.md  LINEAR_ALGEBRA_COMPLIANCE_REPORT_GCP_FAST.md  audit_diagnostics.json  benchmark-results-20260315-003905.json  benchmark-results-20260315-010807.json  benchmark-results-20260321-022102.json  benchmark_result_high_precision_20260404-235810.json  benchmark_result_high_precision_20260412-020950.json  benchmark_result_high_precision_20260416-192711.json  benchmark_result_high_precision_20260417-234939.json  benchmark_result_high_precision_20260426-183200.json  benchmark_result_high_precision_20260426-183944.json  benchmark_result_high_precision_20260426-184445.json  benchmark_result_high_precision_20260426-191430.json  benchmark_result_high_precision_20260426-203058.json  benchmark_result_high_precision_20260426-203133.json  benchmark_result_high_precision_20260426-203222.json  compliance_audit_exact.json  compliance_audit_fast.json  compliance_audit_normal.json  linear_algebra_audit_exact_ALL_20260507-200316.json  linear_algebra_audit_exact_ALL_20260510-194825.json  linear_algebra_audit_exact_ALL_20260512-161258.json  linear_algebra_audit_fast_ALL_20260507-190523.json  linear_algebra_audit_fast_ALL_20260509-125535.json  linear_algebra_audit_fast_ALL_20260512-160227.json  linear_algebra_audit_fast_ALL_20260512-160608.json  (+12 more)
episteme-benchmarks/: .flattened-pom.xml  pom.xml
episteme-client/: .flattened-pom.xml  pom.xml
episteme-core/: .flattened-pom.xml  discovery_diag.txt  pom.xml  test-compile-out.txt
episteme-dashboard/: package-lock.json  package.json
episteme-database/: .flattened-pom.xml  pom.xml
episteme-demos/: .flattened-pom.xml  pom.xml
episteme-featured-apps/: .flattened-pom.xml  pom.xml
episteme-jni/: .flattened-pom.xml  pom.xml
episteme-native/: .discovery_cache  .flattened-pom.xml  all_doubles.txt  pom.xml
episteme-native/src/main/cpp/: CMakeLists.txt
episteme-native/src/main/cpp/audio/: CMakeLists.txt
episteme-native/src/main/cpp/mpfr_build/: CMakeLists.txt  config.h  mini-gmp.h
episteme-native/src/main/cpp/physics/: collision.cpp
episteme-native/src/main/cpp/vision/: CMakeLists.txt
episteme-natural/: .flattened-pom.xml  pom.xml
episteme-resources/: .flattened-pom.xml  pom.xml
episteme-server/: .flattened-pom.xml  pom.xml
episteme-social/: .flattened-pom.xml  pom.xml
episteme-worker/: .flattened-pom.xml  pom.xml
javadoc/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  index.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html  tag-search-index.js  type-search-index.js
launchers/: env_setup.bat  env_setup.sh  run_grid.bat  run_grid.sh
reports/: aws_compliance_report_fast.md  la_compliance_report_exact.md  la_compliance_report_fast.md  la_compliance_report_normal.md
scratch/: MPFRInspector.java  MPFRVersion.java  fix_memcpy.ps1  fix_memcpy_2.ps1  gcp_retry_log.txt  retry_gcp_vm.ps1
scripts/: NativePythonWorker.py
tools/: qiskit_runner.py
(+20706 files in other folders)
